--- a/public/assets-lpe/scss/lpe.scss
+++ b/public/assets-lpe/scss/lpe.scss
@@ -318,7 +318,7 @@ filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#563d7c', endC
     }
     &.w2{
       @media (min-width: $screen-md-min) {
-        width: 20%;
+        width: 40%;
 
     }  
     }
@@ -628,4 +628,32 @@ ul.socialmedia{
         font-size: 14px;
     line-height: normal;
     color: #FFF;
+}
+
+.inicio-banner{
+    background-image: url("../img/tramasf.png");
+    background-size: cover;
+    background-position: center center;
+    color: #FFF;
+    margin-bottom:30px;
+    padding: 0 0;
+    .overlay-banner{
+    padding: 50px 15px;
+
+        background-image: -webkit-gradient(linear,left top,left bottom,from(rgba(0, 0, 0, 0)),to(rgba(0, 0, 0, 0.2)));
+background-image: -webkit-linear-gradient(top,rgba(0, 0, 0, 0) 0,rgba(0, 0, 0, 0.2) 100%);
+background-image: -o-linear-gradient(top,rgba(0, 0, 0, 0) 0,rgba(0, 0, 0, 0.2) 100%);
+background-image: linear-gradient(to bottom,rgba(0, 0, 0, 0) 0,rgba(0, 0, 0, 0.2) 100%);
+filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='rgba(0, 0, 0, 0)', endColorstr='rgba(0, 0, 0, 0.2)', GradientType=0);
+    }
+    h1{    
+        text-shadow: 3px 3px 6px rgba(0, 0, 0, 0.5);
+        letter-spacing: -1.4px;
+        color: #FFF;
+        }
+    .descripcion{
+        text-shadow: 3px 3px 6px rgba(0, 0, 0, 0.5);
+color: rgb(255, 255, 255);
+margin-bottom: 0;
+    }
 }
