--- a/views/lpe/portal/inicio.twig
+++ b/views/lpe/portal/inicio.twig
@@ -37,9 +37,9 @@ endblock %} {% block body %}
                 <a href="{{ urlFor('shwDerecho', {'idDer': derecho.contenible_id})}}">
                     <div class="grid-item" style="background-image: url('{{linkImagen}}');background-position:center top; background-size:cover;">
                         <figure class="cap-bot">
-                            <!--<div class="text-center">
-                                <h6><strong>{{ derecho.titulo }}</strong></h6>
-                            </div>-->
+                            <div class="text-center" style="">
+                                <h5><strong>{{ derecho.titulo }}</strong></h5>
+                            </div>
                             <figcaption>
                                 ¡Participá! <i class="fa fa-hand-paper-o fa-lg fa-fw"></i>
                             </figcaption>
