--- a/views/lpe/portal/inicio.twig
+++ b/views/lpe/portal/inicio.twig
@@ -33,7 +33,7 @@ endblock %} {% block body %}
                     <div class="grid-item" style="background-image: url('{{linkImagen}}');background-position:center top; background-size:cover;">
                         <figure class="cap-bot">
                             <div class="text-center" style="">
-                                <h5><strong>{{ derecho.titulo }}</strong></h5>
+                                <h5 style="text-transform: uppercase"><strong>{{ derecho.titulo }}</strong></h5>
                             </div>
                             <figcaption>
                                 ¡Participá! <i class="fa fa-hand-paper-o fa-lg fa-fw"></i>
