--- a/public/assets-lpe/scss/lpe.scss
+++ b/public/assets-lpe/scss/lpe.scss
@@ -289,8 +289,8 @@ background-image: -webkit-linear-gradient(top,rgba(0, 0, 0, 0) 0,rgba(0, 0, 0, 0
 background-image: -o-linear-gradient(top,rgba(0, 0, 0, 0) 0,rgba(0, 0, 0, 0.4) 100%);
 background-image: linear-gradient(to bottom,rgba(0, 0, 0, 0) 0,rgba(0, 0, 0, 0.4) 100%);
 filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='rgba(0, 0, 0, 0)', endColorstr='rgba(0, 0, 0, 0.4)', GradientType=0);
-    padding: 0 3px 20px;
-    height:150px;
+    padding: 20px 3px 20px;
+    height:170px;
     h5{
         text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.6);
         letter-spacing: -1px;
@@ -324,7 +324,8 @@ filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#563d7c', endC
         
     }
     @media (min-width: $screen-md-min) {
-        width: 20%;
+        width: 23%;
+        margin: 10px 1%;
     }
     &.w2{
       @media (min-width: $screen-md-min) {
@@ -641,7 +642,7 @@ ul.socialmedia{
 }
 
 .inicio-banner{
-    background-image: url("../img/tramasf.png");
+    background-image: url("../../img/banner.jpg");
     background-size: cover;
     background-position: center center;
     color: #FFF;
