Cambio en el sharer

--- a/views/lpe/master.twig
+++ b/views/lpe/master.twig
@@ -9,13 +9,13 @@
     {% block opengraph %}
     		<meta property="og:url"                content="{{ baseUrl() }}" />
 <meta property="og:type"               content="website" />
-<meta property="og:title"              content="Ley de Educación de Santa Fe" />
-<meta property="og:description"        content="Santa Fe Construye Educación y Futuro. Diálogos para la ley provincial de educación. Un espacio de debate amplio, profundo y diverso, en clave de derecho, sobre la educación que la sociedad santafesina necesita." />
+<meta property="og:title"              content="Nueva Ley del Árbol" />
+<meta property="og:description"        content="Desde el Gobierno de la provincia de Santa Fe te presentamos el proyecto para una nueva Ley del Árbol. Te invitamos a conocerlo y a que realices tu aporte directamente o a través de la organización de la que formes parte />
 <meta property="og:image"              content="{{ baseUrl() }}/assets-lpe/img/sharer.png" />
     {% endblock %}
 <link rel="shortcut icon" href="{{ baseUrl() }}/assets-lpe/img/favicon.ico" type="image/x-icon">
 		<link rel="icon" href="{{ baseUrl() }}/assets-lpe/img/favicon.ico" type="image/x-icon">
-    <title>{% block titulo %}Nueva Ley de Educación Provincial - Gobierno de Santa Fe{% endblock titulo %}</title>
+    <title>{% block titulo %}Nueva Ley del Arbol - Gobierno de Santa Fe{% endblock titulo %}</title>
     <link rel="" type="" href="">
     <!-- Bootstrap -->
     {% block linkhead %}{% endblock %}
