--- a/views/lpe/master.twig
+++ b/views/lpe/master.twig
@@ -10,7 +10,7 @@
     		<meta property="og:url"                content="{{ baseUrl() }}" />
 <meta property="og:type"               content="website" />
 <meta property="og:title"              content="Nueva Ley del Árbol" />
-<meta property="og:description"        content="Desde el Gobierno de la provincia de Santa Fe te presentamos el proyecto para una nueva Ley del Árbol. Te invitamos a conocerlo y a que realices tu aporte directamente o a través de la organización de la que formes parte />
+<meta property="og:description"        content="Desde el Gobierno de la provincia de Santa Fe te presentamos el proyecto para una nueva Ley del Árbol. Te invitamos a conocerlo y a que realices tu aporte directamente o a través de la organización de la que formes parte" />
 <meta property="og:image"              content="{{ baseUrl() }}/assets-lpe/img/sharer.png" />
     {% endblock %}
 <link rel="shortcut icon" href="{{ baseUrl() }}/assets-lpe/img/favicon.ico" type="image/x-icon">
