--- a/views/lpe/contenido/derecho/ver.twig
+++ b/views/lpe/contenido/derecho/ver.twig
@@ -10,14 +10,14 @@
 {% block opengraph %}
 <meta property="og:url"                content="{{ baseUrl() }}/derecho/{{derecho.id}}" />
 <meta property="og:type"               content="article" />
-<meta property="og:title"              content="{{ derecho.titulo}} - Ley de Educación de Santa Fe" />
-<meta property="og:description"        content="Enterate más acerca de este derecho. Santa Fe Construye Educación y Futuro. Diálogos para la ley provincial de educación. Un espacio de debate amplio, profundo y diverso, en clave de derecho, sobre la educación que la sociedad santafesina necesita." />
+<meta property="og:title"              content="{{ derecho.titulo}} - Ley del Árbol" />
+<meta property="og:description"        content="Enterate más acerca de esta nueva Ley.Te invitamos a conocerlo y a que realices tu aporte directamente o a través de la organización de la que formes parte." />
 {% if derecho.imagen == 1 %}
 <meta property="og:image"              content="{{linkImagen}}" />
 {% else %}
 <meta property="og:image"              content="{{ baseUrl() }}/assets-lpe/img/sharer.png"/>
 {% endif %}
-<meta property="og:video"              content="https://www.youtube.com/watch?v={{derecho.video}}" />
+<!--<meta property="og:video"              content="https://www.youtube.com/watch?v={{derecho.video}}" />-->
 {% endblock %}
 {% block linkhead %} {% endblock %} {# ----------------------------------------------------------- #} {% block titulo %}{{ derecho.titulo }}{% endblock %} {% block body %}
 <article>
@@ -57,7 +57,7 @@
                             <a href="javascript:void(0)" data-toggle="modal" data-target="#comentarios{{ seccion.id }}" class="btn btn-info">{{ seccion.comentarios|length }} <i class="zmdi zmdi-comments zmdi-hc-lg zmdi-hc-fw"></i></a>
                         </div>
                     </div>
-                    <p class="lead"><span class="badge">&nbsp;&nbsp;{{ptj}}<i class="zmdi zmdi-long-arrow-up zmdi-hc-fw zmdi-hc-lg"></i></span>&nbsp;&nbsp;{{seccion.descripcion|nl2br}}</p>
+                    <p class=""><span class="badge">&nbsp;&nbsp;{{ptj}}<i class="zmdi zmdi-long-arrow-up zmdi-hc-fw zmdi-hc-lg"></i></span>&nbsp;&nbsp;{{seccion.descripcion|bbcode}}</p>
                     <!--<h6><b>Importancia de la acción</b></h6>
                     <div class="btn-group btn-group-justified" style="margin-bottom:10px;">
                         <a href="javascript:votarSeccion({{seccion.id}},3)" class="btn {{((voto[seccion.id] is not null) and (voto[seccion.id] == 3)) ? 'btn-primary disabled' : 'btn-default'}}">Alta</a>
