Agregado los textos estaticos

--- a/views/lpe/contenido/static/propuesta.twig
+++ b/views/lpe/contenido/static/propuesta.twig
@@ -6,17 +6,15 @@
              SANTA FE CONSTRUYE EDUCACIÓN Y FUTURO
                 </strong></h1>
              <p class="lead">
-
 Desde el Gobierno de Santa Fe se asume a la Educación como promotora de igualdad, emancipación y libertad ciudadana, para posibilitar la construcción colectiva de las condiciones sociales y culturales generadoras de la convivencia y la vida en democracia; priorizando la igualdad de derechos estudiantiles para el acceso, permanencia, aprendizaje y egreso del sistema educativo.
              </p>
              <p class="lead">
-
 “Santa Fe construye Educación y Futuro. Diálogos para la Ley Provincial de Educación” recoge los sentidos del encuentro, el diálogo, la participación y el compromiso por parte de la ciudadanía, como forma de construcción y transformación de la educación para incidir en el presente y el futuro. La propuesta plantea un debate amplio, profundo y diverso sobre la educación que la sociedad santafesina necesita.  
              </p>
+             <p class="lead"><a href="#">Ver mas</a></p>
         </div>
     </div>
 </div>
-{% include 'lpe/contenido/opinion/ver.twig' %}
 
 {% endblock body %} {# -------------------------------------------- #} {% block scripts %}
 <script>
