--- a/views/lpe/contenido/static/historia.twig
+++ b/views/lpe/contenido/static/historia.twig
@@ -3,7 +3,7 @@
     <div class="row">
         <div class="col-xs-10 col-xs-offset-1 col-sm-8 col-sm-offset-2">
             <h1><strong>
-             Historia
+             HISTORIA
                 </strong></h1>
              <p class="lead">
 En el año 1935 se realizó un Inventario Forestal Nacional. En ese momento se determinó que la Provincia contaba con  5.900.000 hectáreas de bosques no insular.
