--- a/views/lpe/contenido/derecho/ver.twig
+++ b/views/lpe/contenido/derecho/ver.twig
@@ -43,27 +43,27 @@
             <div id="derecho" class="col-xs-12 col-sm-12 col-md-8">
                 <div id="descripcion">
                     <p>{{ derecho.descripcion|bbCode }}</p>
+                    <hr>
                 </div>
                 {% for seccion in derecho.secciones %}
                 <div class="accion clearfix">
                     <div class="pull-left" style="margin-right:20px">
                         {% set ptj = (seccion.votos_alta * 3) + (seccion.votos_media * 2) + (seccion.votos_baja * 1) %}
-                        <!--<h5>&nbsp;{{seccion.votos_alta}}/{{seccion.votos_media}}/{{seccion.votos_baja}}<i class="zmdi zmdi zmdi-chart zmdi-hc-fw zmdi-hc-lg"></i></h5>-->
-                        <!--<h5 class="text-success">&nbsp;{{ptj}}<i class="zmdi zmdi-long-arrow-up zmdi-hc-fw zmdi-hc-lg"></i></h5>-->
-                        <div class="btn-group-vertical btn-group-sm">
-                            <a href="{{ user ? 'javascript:votarSeccion(' ~ seccion.id ~',3)' : urlFor('shwLogin')}}" class="btn {{((voto[seccion.id] is not null) and (voto[seccion.id] == 3)) ? 'btn-primary disabled' : 'btn-default'}}">Muy importante</a>
-                            <a href="{{ user ? 'javascript:votarSeccion(' ~ seccion.id ~',2)' : urlFor('shwLogin')}}" class="btn {{((voto[seccion.id] is not null) and (voto[seccion.id] == 2)) ? 'btn-primary disabled' : 'btn-default'}}">Importante</a>
-                            <a href="{{ user ? 'javascript:votarSeccion(' ~ seccion.id ~',1)' : urlFor('shwLogin')}}" class="btn {{((voto[seccion.id] is not null) and (voto[seccion.id] == 1)) ? 'btn-primary disabled' : 'btn-default'}}">Poco importante</a>
-                            <a href="javascript:void(0)" data-toggle="modal" data-target="#comentarios{{ seccion.id }}" class="btn btn-info">{{ seccion.comentarios|length }} <i class="zmdi zmdi-comments zmdi-hc-lg zmdi-hc-fw"></i></a>
-                        </div>
+                        <span class="label label-primary" style="padding: 10px 8px 8px; font-size: 10px;">&nbsp;{{ptj}}<i class="zmdi zmdi-long-arrow-up zmdi-hc-fw zmdi-hc-lg"></i></span>
                     </div>
-                    <div style="font-size: 14px; line-height: 21px;"><span class="badge">&nbsp;&nbsp;{{ptj}}<i class="zmdi zmdi-long-arrow-up zmdi-hc-fw zmdi-hc-lg"></i></span>&nbsp;&nbsp;{{seccion.descripcion|bbCode}}</div>
+                    <div style="font-size: 14px; line-height: 21px; margin-top: -20px;">{{seccion.descripcion|bbCode}}</div>
                     <!--<h6><b>Importancia de la acción</b></h6>
                     <div class="btn-group btn-group-justified" style="margin-bottom:10px;">
                         <a href="javascript:votarSeccion({{seccion.id}},3)" class="btn {{((voto[seccion.id] is not null) and (voto[seccion.id] == 3)) ? 'btn-primary disabled' : 'btn-default'}}">Alta</a>
                         <a href="javascript:votarSeccion({{seccion.id}},2)" class="btn {{((voto[seccion.id] is not null) and (voto[seccion.id] == 2)) ? 'btn-primary disabled' : 'btn-default'}}">Media</a>
                         <a href="javascript:votarSeccion({{seccion.id}},1)" class="btn {{((voto[seccion.id] is not null) and (voto[seccion.id] == 1)) ? 'btn-primary disabled' : 'btn-default'}}">Baja</a>
                     </div>-->
+                    <div class="btn-group btn-group-justified btn-group-sm" style="margin-top: 15px;">
+                            <a href="{{ user ? 'javascript:votarSeccion(' ~ seccion.id ~',3)' : urlFor('shwLogin')}}" class="btn {{((voto[seccion.id] is not null) and (voto[seccion.id] == 3)) ? 'btn-primary disabled' : 'btn-default'}}">Muy importante</a>
+                            <a href="{{ user ? 'javascript:votarSeccion(' ~ seccion.id ~',2)' : urlFor('shwLogin')}}" class="btn {{((voto[seccion.id] is not null) and (voto[seccion.id] == 2)) ? 'btn-primary disabled' : 'btn-default'}}">Importante</a>
+                            <a href="{{ user ? 'javascript:votarSeccion(' ~ seccion.id ~',1)' : urlFor('shwLogin')}}" class="btn {{((voto[seccion.id] is not null) and (voto[seccion.id] == 1)) ? 'btn-primary disabled' : 'btn-default'}}">Poco importante</a>
+                            <a href="javascript:void(0)" data-toggle="modal" data-target="#comentarios{{ seccion.id }}" class="btn btn-info"> Participá <i class="zmdi zmdi-comments zmdi-hc-lg zmdi-hc-fw"></i> {{ seccion.comentarios|length }}</a>
+                        </div>
                     {% include 'lpe/contenido/derecho/comentarioModal.twig' %}
                 </div>
                 <hr>
