--- a/views/lpe/contenido/derecho/ver.twig
+++ b/views/lpe/contenido/derecho/ver.twig
@@ -51,7 +51,7 @@
                         {% set ptj = (seccion.votos_alta * 3) + (seccion.votos_media * 2) + (seccion.votos_baja * 1) %}
                         <span class="label label-primary" style="padding: 10px 8px 8px; font-size: 10px;">&nbsp;{{ptj}}<i class="zmdi zmdi-long-arrow-up zmdi-hc-fw zmdi-hc-lg"></i></span>
                     </div>
-                    <div style="font-size: 14px; line-height: 21px; margin-top: -20px;">{{seccion.descripcion|bbCode}}</div>
+                    <div style="font-size: 14px; line-height: 21px;">{{seccion.descripcion|bbCode}}</div>
                     <!--<h6><b>Importancia de la acción</b></h6>
                     <div class="btn-group btn-group-justified" style="margin-bottom:10px;">
                         <a href="javascript:votarSeccion({{seccion.id}},3)" class="btn {{((voto[seccion.id] is not null) and (voto[seccion.id] == 3)) ? 'btn-primary disabled' : 'btn-default'}}">Alta</a>
