Mas cambios. Imagen como fondo en los derechos. Cambios en el inicio, y chau el link de Tumblr.

--- a/views/lpe/contenido/derecho/ver.twig
+++ b/views/lpe/contenido/derecho/ver.twig
@@ -23,7 +23,19 @@
 <article>
 {% set colorSeleccionado = random(3) %}
     {% if derecho.imagen == 1 %}
-    <img src="{{linkImagen}}" class="img-responsive" style="width:100%;margin-bottom: 30px;" alt="">
+    <!--<img src="{{linkImagen}}" class="img-responsive" style="width:100%;margin-bottom: 30px;" alt="">-->
+ <div class="titulo-derecho-background bgcolor{{colorSeleccionado}}" style="{{ derecho.imagen == 1 ? 'background-image: url(' ~ linkImagen ~ ')':''}}">
+        <div class="overlay">
+            <div class="container">
+                <div class="row">
+                    <div class="col-xs-12">
+                        <h1><strong>{{ derecho.titulo }}</strong></h1> {% if user and (user.patrulla_id != null) %}
+                        {#<h6><a href="{{ urlFor('shwModifDerecho', {'idDer': derecho.id}) }}" class="btn btn-default"><i class="zmdi zmdi-edit zmdi-hc-lg zmdi-hc-fw"></i>Editar derecho</a></h6>#} {% endif %}
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
     {% else %}
     <div class="titulo-derecho-background bgcolor{{colorSeleccionado}}" style="{# derecho.imagen == 1 ? 'background-image: url(' ~ linkImagen ~ ')':''#}">
         <div class="overlay">
