--- a/views/lpe/master.twig
+++ b/views/lpe/master.twig
@@ -142,13 +142,12 @@
     </div>
     <div class="footer">
         <div class="barra-footer"></div>
-        <img class="img-logo" src="{{ baseUrl() }}/assets-lpe/img/logo-footer.jpg" alt="">
+        <img class="img-logo" src="{{ baseUrl() }}/img/logo_footer_santafe_participa.png" alt="">
         <div class="text-center" style="color: #e0e0e0; font-size: 11px;">
             <ul class="list-inline socialmedia">
                 <li><a target="_blank" href="http://www.twitter.com/GobSantaFe"><i class="icon-footertwitter"></i></a></li>
                 <li><a target="_blank" href="http://www.facebook.com/GobSantaFe"><i class="icon-footerfacebook"></i></a></li>
                 <li><a target="_blank" href="http://gplus.to/GobSantaFe"><i class="icon-footerg"></i></a></li>
-                <li><a target="_blank" href="http://gobsantafe.tumblr.com/"><i class="icon-footertumblr"></i></a></li>
                 <li><a target="_blank" href="http://www.youtube.com/GobSantaFe"><i class="icon-footeryoutube"></i></a></li>
                 <li><a target="_blank" href="http://instagram.com/gobsantafe"><i class="icon-footerinstagram"></i></a></li>
                 <li><a target="_blank" href="https://es.foursquare.com/gobsantafe"><i class="icon-footerfoursquare"></i></a></li>
