--- a/views/lpe/portal/inicio.twig
+++ b/views/lpe/portal/inicio.twig
@@ -20,6 +20,9 @@ endblock %} {% block body %}
 
 
 <div id="derechos" class="container-fluid">
+    <div class="row text-center">
+        <h4 class="text-primary" style="font-weight: 300;">CONOCÉ LOS DISTINTOS PUNTOS DE LA LEY Y PARTICIPÁ</h4>
+    </div>
     <div class="row">
         <div class="col-xs-12 col-md-10 col-md-offset-1">
             
