Agregados los assets y corregidas las rutas

--- a/views/lpe/portal/inicio.twig
+++ b/views/lpe/portal/inicio.twig
@@ -127,7 +127,7 @@ endblock %} {% block body %}
     <div class="row">
 <div class="col-xs-12 text-center">
     <h5 style="font-weight: bold; margin: 40px auto; letter-spacing: -0.4px;">COLABORARON:</h5>
-    <img src="{{ baseUrl() }}/img/logos.png" class="img-responsive" style="margin: auto;" alt="">
+    <img src="{{ baseUrl() }}/assets-lpe/img/logos.png" class="img-responsive" style="margin: auto;" alt="">
 </div>
         </div>
 </div>
